[package]
name = "cask"
version = "0.7.1"
authors = ["Andre Silva"]
description = "A fast key-value store backed by a log-structured hash table"
repository = "https://github.com/andresilva/cask"
readme = "README.md"
license = "MIT"
keywords = ["database", "db", "key-value", "kv"]

[dependencies]
byteorder = "~1.3.0"
fs2 = "~0.4.1"
lazy_static = "~1.2.0"
log = "~0.4.0"
regex = "~1.3.0"
time = "~0.2.0"
twox-hash = "~1.5.0"

[dev-dependencies]
env_logger = "~0.7.0"
rand = "~0.7.0"

[features]
default = []
